--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,7 +1,8 @@
 ################
 #  MY APP      #
 ################
-site.url=file:///D:/website/index.html
+#site.url=file:///D:/website/index.html
+site.url=https://the-internet.herokuapp.com/dynamic_content
 
 ################
 #  APPLITOOLS  #
