Refactoring project structure

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,10 +1,10 @@
 ################
 #  MY APP      #
 ################
-#site.url=file:///D:/website/index.html
-site.url=https://the-internet.herokuapp.com/dynamic_content
+site.bookstore.url=file:///D:/website/index.html
+site.dynamic.url=https://the-internet.herokuapp.com/dynamic_content
 
 ################
 #  APPLITOOLS  #
 ################
-applitools.api.key=(hidden)
+applitools.api.key=
