[setForceFullPageScreenshot] for Large & Deep DOM

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -3,8 +3,9 @@
 ################
 site.bookstore.url=file:///D:/website/index.html
 site.dynamic.url=https://the-internet.herokuapp.com/dynamic_content
+site.largedom.url=https://the-internet.herokuapp.com/large
 
 ################
 #  APPLITOOLS  #
 ################
-applitools.api.key=
+applitools.api.key=ytBuhz103wTvmOTIw83T4MLOqU7RtGl1NSc0ftOvkTFvc110
