[checkFrame] check iFrames within a certain page

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -4,7 +4,7 @@
 site.bookstore.url=file:///D:/website/index.html
 site.dynamic.url=https://the-internet.herokuapp.com/dynamic_content
 site.largedom.url=https://the-internet.herokuapp.com/large
-
+site.frames.url=https://the-internet.herokuapp.com/nested_frames
 ################
 #  APPLITOOLS  #
 ################
