[Test suit] Organizing tests

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -5,7 +5,8 @@ site.bookstore.url=file:///D:/website/index.html
 site.dynamic.url=https://the-internet.herokuapp.com/dynamic_content
 site.largedom.url=https://the-internet.herokuapp.com/large
 site.frames.url=https://the-internet.herokuapp.com/nested_frames
+sites.tables.url=https://the-internet.herokuapp.com/tables
 ################
 #  APPLITOOLS  #
 ################
-applitools.api.key=ytBuhz103wTvmOTIw83T4MLOqU7RtGl1NSc0ftOvkTFvc110
+applitools.api.key=
