[Check PDF file] Generate & Visual validation of PDF files

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -6,6 +6,7 @@ site.dynamic.url=https://the-internet.herokuapp.com/dynamic_content
 site.largedom.url=https://the-internet.herokuapp.com/large
 site.frames.url=https://the-internet.herokuapp.com/nested_frames
 sites.tables.url=https://the-internet.herokuapp.com/tables
+sites.invoices.url=https://www.invoicesimple.com/invoice-generator
 ################
 #  APPLITOOLS  #
 ################
